# multi-tenant-boilerplate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint-celery.sh  docker-entrypoint.sh  pyproject.toml
.github/instructions/: project.instructions.md
.github/workflows/: README.md  ci.yml
auth/: AGENTS.md  exceptions.py  serializers.py  services.py  tasks.py  urls.py  views.py
auth/tests/: test_services.py  test_views.py
config/: celery.py  public_urls.py  settings.py  urls.py
docs/: ci-pipeline.md  docker.md  migrationlar.md  migrations.md  setup.md  tenant-aware-storage.md  tenantlar.md  tenants.md
docs/flows/: create_company.md
employees/: AGENTS.md  choices.py  exceptions.py  mixins.py  models.py  permissions.py  serializers.py  services.py  views.py
employees/migrations/: 0001_initial.py  0002_employee_attributes.py  0003_remove_employee_business_phone_number_and_more.py  0004_employee_is_active.py  0005_personaldetail.py  0006_alter_personaldetail_date_of_birth_and_more.py  0007_remove_employee_manager.py  0008_alter_employee_photo.py
employees/tests/: test_services.py  test_views.py
teams/: AGENTS.md  models.py  serializers.py  services.py  views.py
teams/migrations/: 0001_initial.py  0002_team_parent.py
teams/tests/: test_services.py  test_views.py
templates/emails/: verification_email.html
tenants/: AGENTS.md  exceptions.py  middleware.py  models.py  serializers.py  services.py  views.py
tenants/migrations/: 0001_initial.py  0002_initial.py  0003_alter_client_description_alter_client_is_active_and_more.py  0004_alter_client_created_on_alter_client_updated_on.py  0005_client_attributes.py  0006_client_address_client_city_client_country_and_more.py
titles/: AGENTS.md  models.py  serializers.py  services.py  views.py
titles/migrations/: 0001_initial.py  0002_remove_title_tenant.py
titles/tests/: test_services.py  test_views.py
users/: choices.py  models.py  permissions.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_created_on_user_updated_on_and_more.py  0003_user_role.py  0004_alter_user_role.py  0008_user_attributes.py  (+3 more)
utils/: AGENTS.md  exceptions.py  interfaces.py  mixins.py  models.py  services.py  storages.py
(+3 files in other folders)
