[project]
name = "hrm-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-extensions>=4.1",
    "django-tenant-users>=2.2.1",
    "django-tenants>=3.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "model-bakery>=1.20.5",
    "pillow>=12.0.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.1.1",
    "sendgrid>=6.12.5",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "coverage>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''
/(
    \.git
  | \.venv
  | \.uv
  | __pycache__
  | migrations
  | staticfiles
  | mediafiles
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_glob = ["*/migrations/*", "staticfiles/*", "mediafiles/*"]
known_django = ["django"]
known_first_party = ["auth", "config", "employees", "tenants", "users", "utils"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "manage.py",
    "*/venv/*",
    "*/.venv/*",
    "*/.uv/*",
    "config/wsgi.py",
    "config/asgi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
